# AIHelper

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  roadmap.md
.github/workflows/: ci.yml  release.yml
crates/ah-mcp/: Cargo.toml
crates/ah-mcp/src/: lib.rs  server.rs
crates/ah-plugin-api/: Cargo.toml
crates/ah-plugin-api/src/: lib.rs
crates/ah-runtime/: Cargo.toml
crates/ah-runtime/src/: core.rs  executor.rs  lib.rs  typed.rs
docs/agents/: README.md
docs/agents/recipes/: ctx-pack.md  file-read.md  file-tree.md  git-changes.md  mcp-stdio.md  search-text.md  task-recipes.md
docs/developers/: README.md  architecture.md  contributing.md  performance.md  plugins.md
docs/plans/: 2026-07-10-runtime-and-contract-hardening-design.md  2026-07-11-review-cycle-2-hardening-design.md  2026-07-13-file-integration-tests-design.md  2026-07-13-utf8-prefix-boundary-design.md  2026-07-13-v0.6.3-release-design.md  2026-07-14-workspace-contract-tests-design.md  2026-07-16-ai-info-warning-formatting-design.md  2026-07-16-file-ctx-formatting-design.md  2026-07-16-git-formatting-design.md  2026-07-16-plugin-formatting-design.md  2026-07-16-postgres-formatting-design.md  2026-07-16-project-task-formatting-design.md  2026-07-16-run-http-formatting-design.md  2026-07-16-search-formatting-design.md  2026-07-16-text-formatting-design.md  2026-07-17-mcp-hardening-design.md  2026-07-17-mcp-hardening-implementation.md  2026-07-17-mcp-stdio-server-design.md  2026-07-17-mcp-stdio-server-implementation.md  2026-07-19-command-event-logging-design.md
docs/reference/: README.md  ai.md  ctx.md  file.md  git.md  github.md  gitlab.md  http.md  logging.md  mcp.md  ollama.md  plugins.md  postgres.md  project.md  run.md  search.md  task.md
plugins/ah-plugin-github/: Cargo.toml
plugins/ah-plugin-github/src/: lib.rs  typed.rs
plugins/ah-plugin-gitlab/: Cargo.toml
plugins/ah-plugin-gitlab/src/: lib.rs  typed.rs
plugins/ah-plugin-ollama/: Cargo.toml
plugins/ah-plugin-ollama/src/: lib.rs  typed.rs
plugins/ah-plugin-postgres/: Cargo.toml
plugins/ah-plugin-postgres/src/: lib.rs  typed.rs
scripts/: benchmark.ps1  publish-release.ps1
src/: ai.rs  cli.rs  config.rs  error.rs  event_log.rs  git_status.rs  host_commands.rs  lib.rs  main.rs  output.rs  persistence.rs  plugin_settings.rs  plugins.rs  runtime_flow.rs  safety.rs
src/commands/: ctx.rs  ctx_symbols.rs  file.rs  git.rs  http.rs  mod.rs  project.rs  run.rs  search.rs  task.rs
src/commands/ctx/: domain.rs  io.rs  output.rs
src/commands/file/: domain.rs  io.rs  output.rs
src/commands/git/: domain.rs  io.rs  output.rs
src/commands/http/: domain.rs
src/commands/http/adapters/: io.rs  output.rs
src/commands/project/: domain.rs  rules.rs
src/commands/project/adapters/: io.rs  output.rs
src/commands/run/: domain.rs  io.rs  output.rs
src/commands/search/: domain.rs  io.rs  output.rs
src/commands/task/: domain.rs  io.rs  output.rs
tests/: integration.rs  smoke_help.rs
tests/integration/: ai.rs  common.rs  ctx.rs  file.rs  git.rs  help.rs  http.rs  logging.rs  mcp.rs  plugins.rs  project.rs  run.rs  search.rs  task.rs
