[package]
name = "aihelper"
version = "0.1.0"
edition = "2024"
description = "AIHelper CLI toolbox for AI agents and developers"
default-run = "ah"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
globset = "0.4.16"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

[[bin]]
name = "ah"
path = "src/main.rs"
