[package]
name = "aihelper"
version = "1.0.0"
edition = "2024"
description = "AIHelper CLI toolbox for AI agents and developers"
default-run = "ah"

[workspace]
members = [
    "crates/ah-mcp",
    "crates/ah-plugin-api",
    "crates/ah-runtime",
    "plugins/ah-plugin-github",
    "plugins/ah-plugin-gitlab",
    "plugins/ah-plugin-ollama",
    "plugins/ah-plugin-postgres",
]
resolver = "2"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.39", features = ["derive", "string"] }
command-group = "5.0.1"
fs2 = "0.4.3"
globset = "0.4.16"
ignore = "0.4.27"
libc = "0.2.185"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shell-words = "1.1.0"
thiserror = "2.0.12"
walkdir = "2.5.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ah-plugin-api = { path = "crates/ah-plugin-api" }
ah-runtime = { path = "crates/ah-runtime" }
ah-mcp = { path = "crates/ah-mcp" }
tokio = { version = "1.52.1", features = ["io-std", "rt-multi-thread", "time"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

[[bin]]
name = "ah"
path = "src/main.rs"
