[package]
name = "ah-mcp"
version = "0.6.3"
edition = "2024"
description = "MCP stdio server for AIHelper typed commands"

[dependencies]
ah-plugin-api = { path = "../ah-plugin-api" }
ah-runtime = { path = "../ah-runtime" }
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "transport-io"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52.1", features = ["io-std", "rt-multi-thread", "sync", "time"] }
