[package]
name = "ah-runtime"
version = "0.6.3"
edition = "2024"
description = "Plugin runtime and dynamic loader for AIHelper"

[dependencies]
ah-plugin-api = { path = "../ah-plugin-api" }
jsonschema = { version = "0.48.0", default-features = false }
libloading = "0.8.6"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync", "time"] }
