[package]
name = "ah-plugin-gitlab"
version = "0.6.0"
edition = "2024"
description = "Dynamic AIHelper plugin for GitLab Releases and Pipelines"

[lib]
crate-type = ["cdylib"]

[dependencies]
ah-plugin-api = { path = "../../crates/ah-plugin-api" }
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
